# LFU-LRU-Caches

./: .gitignore  CMakeLists.txt  Makefile  README.md
benchmark/: CMakeLists.txt  bench.sh
benchmark/data/: big_data.txt  big_data2.txt  big_data3.txt
benchmark/result/: lfu-perfect.txt  lru-perfect.txt
benchmark/source/: lfu-perfect.cpp  lru-perfect.cpp
lfu_cache/include/: lfu_cache.hpp
lfu_cache/source/: main.cpp
lru_cache/include/: lru_cache.hpp
lru_cache/source/: main.cpp
perfect_cache/include/: perfect_cache.hpp
perfect_cache/source/: main.cpp
test/: CMakeLists.txt  test.cpp
test/data/: test.txt
test/expected_data/: lru_check_hits.txt  perfect_check_hits.txt
unified_cache/: unified_cache.hpp
